--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -19,28 +19,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="rxj-Zd-w0Z">
-                                <rect key="frame" x="10" y="54" width="394" height="324.5"/>
+                                <rect key="frame" x="10" y="54" width="394" height="274.5"/>
                             </mapView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pul-Po-HHX">
-                                <rect key="frame" x="10" y="398.5" width="394" height="404.5"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pul-Po-HHX">
+                                <rect key="frame" x="10" y="424.5" width="394" height="378.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="scrollIndicatorInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="teamCell" rowHeight="60" id="S18-pO-OcT" customClass="TeamTableViewCell" customModule="The_JBB" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="394" height="60"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="teamCell" id="S18-pO-OcT" customClass="TeamTableViewCell" customModule="The_JBB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="394" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="S18-pO-OcT" id="72T-Yz-lbg">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Tb-NF-Cje">
-                                                    <rect key="frame" x="20" y="10" width="40" height="40"/>
+                                                    <rect key="frame" x="20" y="10" width="24" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="3Tb-NF-Cje" secondAttribute="height" multiplier="1:1" id="9l8-HL-z2i"/>
                                                     </constraints>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ihv-p1-4Gi">
-                                                    <rect key="frame" x="346" y="10" width="40" height="40"/>
+                                                    <rect key="frame" x="346" y="2" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="bM6-kG-ZwD"/>
                                                         <constraint firstAttribute="width" constant="40" id="eAT-kq-Pkm"/>
@@ -52,7 +52,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zof-qc-Yjy">
-                                                    <rect key="frame" x="70" y="10" width="276" height="40"/>
+                                                    <rect key="frame" x="54" y="10" width="292" height="24"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                     <color key="textColor" name="Indigo"/>
                                                     <nil key="highlightedColor"/>
@@ -78,23 +78,32 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="8Za-i7-8DQ">
+                                <rect key="frame" x="0.0" y="348.5" width="414" height="56"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OmU-U6-kby"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="rxj-Zd-w0Z" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" constant="10" id="19Q-we-WeE"/>
                             <constraint firstItem="rxj-Zd-w0Z" firstAttribute="top" secondItem="OmU-U6-kby" secondAttribute="top" constant="10" id="1q1-Qq-Mav"/>
-                            <constraint firstItem="pul-Po-HHX" firstAttribute="top" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="20" id="7aA-BA-6qk"/>
                             <constraint firstItem="pul-Po-HHX" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" constant="10" id="I6h-qW-Ng4"/>
+                            <constraint firstItem="8Za-i7-8DQ" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" id="Z52-Vl-F6V"/>
+                            <constraint firstItem="8Za-i7-8DQ" firstAttribute="top" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="20" id="aQi-0o-1On"/>
                             <constraint firstItem="OmU-U6-kby" firstAttribute="trailing" secondItem="rxj-Zd-w0Z" secondAttribute="trailing" constant="10" id="amR-aH-63y"/>
                             <constraint firstItem="OmU-U6-kby" firstAttribute="bottom" secondItem="pul-Po-HHX" secondAttribute="bottom" constant="10" id="dkG-NY-HcB"/>
+                            <constraint firstItem="8Za-i7-8DQ" firstAttribute="trailing" secondItem="OmU-U6-kby" secondAttribute="trailing" id="oEa-dw-xXm"/>
+                            <constraint firstItem="pul-Po-HHX" firstAttribute="top" secondItem="8Za-i7-8DQ" secondAttribute="bottom" constant="20" id="vka-Jj-onM"/>
                             <constraint firstItem="OmU-U6-kby" firstAttribute="trailing" secondItem="pul-Po-HHX" secondAttribute="trailing" constant="10" id="wIl-i7-5Ez"/>
-                            <constraint firstItem="OmU-U6-kby" firstAttribute="centerY" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="50" id="x6Y-pQ-6aG"/>
+                            <constraint firstItem="OmU-U6-kby" firstAttribute="centerY" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="100" id="x6Y-pQ-6aG"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="bus" catalog="system" id="acY-kT-64o"/>
                     <connections>
                         <outlet property="teamsMapView" destination="rxj-Zd-w0Z" id="pbT-C4-YtK"/>
+                        <outlet property="teamsSearchBar" destination="8Za-i7-8DQ" id="FHL-3q-wnW"/>
                         <outlet property="teamsTableView" destination="pul-Po-HHX" id="LXj-QV-Sxs"/>
                     </connections>
                 </viewController>
@@ -107,7 +116,7 @@
             <objects>
                 <viewController id="OEk-U0-avN" customClass="TeamDetailViewController" customModule="The_JBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8id-8k-wMF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="PoL-74-VOu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
