--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -118,14 +118,134 @@
                     <view key="view" contentMode="scaleToFill" id="8id-8k-wMF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="UOw-4O-uYy">
+                                <rect key="frame" x="0.0" y="20" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xrR-dp-lup">
+                                <rect key="frame" x="20" y="96" width="374" height="692"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="S8u-IA-ryz">
+                                    <size key="itemSize" width="172" height="184"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="playerCell" id="H1n-X8-JNz" customClass="PlayerCollectionViewCell" customModule="The_JBB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="172" height="184"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fdw-Y3-sat">
+                                            <rect key="frame" x="0.0" y="0.0" width="172" height="184"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MeI-qa-u2H">
+                                                    <rect key="frame" x="0.0" y="24" width="172" height="96"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wV4-hc-k8f">
+                                                    <rect key="frame" x="8" y="8" width="156" height="16"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLz-LR-9T5">
+                                                            <rect key="frame" x="0.0" y="0.0" width="8.5" height="16"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pos." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kmf-vy-hUw">
+                                                            <rect key="frame" x="57" y="0.0" width="26.5" height="16"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B/T:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAj-Jv-QwI">
+                                                            <rect key="frame" x="132" y="0.0" width="24" height="16"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Dqn-oj-NB4">
+                                                    <rect key="frame" x="8" y="120" width="21" height="56"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ht." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a87-Hx-94k">
+                                                            <rect key="frame" x="0.0" y="0.0" width="21" height="26"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wt." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkM-T4-DZp">
+                                                            <rect key="frame" x="0.0" y="30" width="21" height="26"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hometown" textAlignment="right" lineBreakMode="clip" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHc-Mq-6F3">
+                                                    <rect key="frame" x="29" y="120" width="135" height="56"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wV4-hc-k8f" firstAttribute="leading" secondItem="fdw-Y3-sat" secondAttribute="leading" constant="8" id="7nJ-4x-62B"/>
+                                                <constraint firstItem="MeI-qa-u2H" firstAttribute="leading" secondItem="fdw-Y3-sat" secondAttribute="leading" id="AiM-XT-kEv"/>
+                                                <constraint firstItem="MeI-qa-u2H" firstAttribute="centerY" secondItem="fdw-Y3-sat" secondAttribute="centerY" constant="-20" id="DI4-5c-SCf"/>
+                                                <constraint firstItem="Dqn-oj-NB4" firstAttribute="top" secondItem="MeI-qa-u2H" secondAttribute="bottom" id="E4b-FX-eIY"/>
+                                                <constraint firstAttribute="bottom" secondItem="KHc-Mq-6F3" secondAttribute="bottom" constant="8" id="F9C-TA-7Zx"/>
+                                                <constraint firstItem="Dqn-oj-NB4" firstAttribute="leading" secondItem="fdw-Y3-sat" secondAttribute="leading" constant="8" id="Gof-3K-GuV"/>
+                                                <constraint firstItem="KHc-Mq-6F3" firstAttribute="top" secondItem="Dqn-oj-NB4" secondAttribute="top" id="Hiv-x7-YFi"/>
+                                                <constraint firstItem="MeI-qa-u2H" firstAttribute="centerX" secondItem="fdw-Y3-sat" secondAttribute="centerX" id="Ol9-aZ-ncd"/>
+                                                <constraint firstAttribute="trailing" secondItem="KHc-Mq-6F3" secondAttribute="trailing" constant="8" id="UTD-2C-WqG"/>
+                                                <constraint firstItem="KHc-Mq-6F3" firstAttribute="leading" secondItem="Dqn-oj-NB4" secondAttribute="trailing" id="Z56-74-ykT"/>
+                                                <constraint firstAttribute="bottom" secondItem="Dqn-oj-NB4" secondAttribute="bottom" constant="8" id="efa-fF-xl2"/>
+                                                <constraint firstItem="wV4-hc-k8f" firstAttribute="top" secondItem="fdw-Y3-sat" secondAttribute="top" constant="8" id="epr-ft-Gaz"/>
+                                                <constraint firstItem="MeI-qa-u2H" firstAttribute="top" secondItem="wV4-hc-k8f" secondAttribute="bottom" id="m8f-io-b8U"/>
+                                                <constraint firstAttribute="trailing" secondItem="MeI-qa-u2H" secondAttribute="trailing" id="sYA-tY-8aZ"/>
+                                                <constraint firstAttribute="trailing" secondItem="wV4-hc-k8f" secondAttribute="trailing" constant="8" id="v6f-qZ-oaA"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="172" height="184"/>
+                                        <connections>
+                                            <outlet property="batThrowLabel" destination="hAj-Jv-QwI" id="efa-G7-oJw"/>
+                                            <outlet property="heightLabel" destination="a87-Hx-94k" id="8HX-Z8-6cD"/>
+                                            <outlet property="hometownLabel" destination="KHc-Mq-6F3" id="saH-ZD-8eJ"/>
+                                            <outlet property="nameLabel" destination="MeI-qa-u2H" id="kSv-8d-9Rc"/>
+                                            <outlet property="numberLabel" destination="zLz-LR-9T5" id="RMO-fM-G68"/>
+                                            <outlet property="positionLabel" destination="Kmf-vy-hUw" id="aBj-Zk-9Mp"/>
+                                            <outlet property="weightLabel" destination="nkM-T4-DZp" id="57f-a2-56I"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="PoL-74-VOu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UOw-4O-uYy" firstAttribute="top" secondItem="PoL-74-VOu" secondAttribute="top" constant="20" id="0Yf-yy-zd1"/>
+                            <constraint firstItem="xrR-dp-lup" firstAttribute="leading" secondItem="PoL-74-VOu" secondAttribute="leading" constant="20" id="ChP-yH-zkf"/>
+                            <constraint firstItem="PoL-74-VOu" firstAttribute="trailing" secondItem="xrR-dp-lup" secondAttribute="trailing" constant="20" id="OOd-YM-Bf5"/>
+                            <constraint firstItem="xrR-dp-lup" firstAttribute="top" secondItem="UOw-4O-uYy" secondAttribute="bottom" constant="20" id="Rz2-qA-Wbd"/>
+                            <constraint firstItem="UOw-4O-uYy" firstAttribute="leading" secondItem="PoL-74-VOu" secondAttribute="leading" id="aFo-rz-gxh"/>
+                            <constraint firstItem="PoL-74-VOu" firstAttribute="bottom" secondItem="xrR-dp-lup" secondAttribute="bottom" constant="20" id="jve-Kj-etG"/>
+                            <constraint firstItem="UOw-4O-uYy" firstAttribute="trailing" secondItem="PoL-74-VOu" secondAttribute="trailing" id="xvJ-0d-AXO"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Lt9-UV-Pej"/>
+                    <connections>
+                        <outlet property="playerSearchBar" destination="UOw-4O-uYy" id="x8F-YN-yMe"/>
+                        <outlet property="rosterCollectionView" destination="xrR-dp-lup" id="kuK-SM-tsZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="trz-94-kLU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1635" y="345"/>
+            <point key="canvasLocation" x="1634.7826086956522" y="344.86607142857139"/>
         </scene>
         <!--Rankings View Controller-->
         <scene sceneID="Fij-nO-gsV">
